--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,7 +3,8 @@
 @import 'extensions/sitemap';
 
 // Libs - Библиотеки
-// @import '~swiper/swiper-bundle.min.css';
+@import '~swiper/swiper-bundle.min.css';
+@import '~plyr/dist/plyr.css';
 
 // Variables - Переменные
 @import 'variables/fonts';
