--- a/src/scss/variables/UI.scss
+++ b/src/scss/variables/UI.scss
@@ -51,9 +51,9 @@ button {
   transition-timing-function: ease;
   appearance: none;
 
-  @include max-width($touch) {
-    padding: $button-padding-sm;
-  }
+  // @include max-width($touch) {
+  //   padding: $button-padding-sm;
+  // }
 
   @media (hover) {
     &:hover {
