--- a/src/scss/variables/variables.scss
+++ b/src/scss/variables/variables.scss
@@ -13,7 +13,7 @@ $primary-hover: #19486a;
 $primary-active: #19486a;
 $primary-disable: #5d7586;
 $primary-gradient: linear-gradient(180deg, #3d6d8f 0%, #19486a 100%);
-$secondary-1: #f4f7fe;
+$secondary-1: #a0c9e7;
 $secondary-2: #e1e9f8;
 $secondary-3: #c9d4ea;
 $secondary-4: #b0bbd5;
@@ -65,7 +65,7 @@ $section-padding-phone: 20px 0;
 // h1
 $h-one-font: $main-font;
 $h-one-font-size: 4rem;
-$h-one-font-size-sm: 1.875rem;
+$h-one-font-size-sm: 24px;
 $h-one-font-weight: normal;
 $h-one-line-height: 1.125;
 $h-one-color: currentColor;
@@ -74,7 +74,7 @@ $h-one-margin: 0 0 2.375rem;
 // h2
 $h-two-font: $main-font;
 $h-two-font-size: 3rem;
-$h-two-font-size-sm: 1.875rem;
+$h-two-font-size-sm: 24px;
 $h-two-font-weight: normal;
 $h-two-line-height: 1.333;
 $h-two-color: currentColor;
