доделал секцию offers

--- a/src/modules/components/card-offer.hbs
+++ b/src/modules/components/card-offer.hbs
@@ -3,7 +3,11 @@
     <div class="card-offer__info">
       <div class="card-offer__content">
         <div class="card-offer__sale h1"> 20% </div>
-        <div class="card-offer__title h2"> при проживании от 7-10 суток </div>
+        <div class="card-offer__title-wrapper">
+          <p class="card-offer__title h2">
+            при проживании от&#160;7-10 суток
+          </p>
+        </div>
         <p class="card-offer__descr">
           *предоставляется при единовременном бронировании на период от 7 до 10
           суток
