--- a/src/scss/variables/variables.scss
+++ b/src/scss/variables/variables.scss
@@ -14,7 +14,7 @@ $primary-active: #19486a;
 $primary-disable: #5d7586;
 $primary-gradient: linear-gradient(180deg, #3d6d8f 0%, #19486a 100%);
 $secondary-1: #a0c9e7;
-$secondary-2: #e1e9f8;
+$secondary-2: #f0f7fd;
 $secondary-3: #c9d4ea;
 $secondary-4: #b0bbd5;
 $secondary-5: #8f9bba;
