изменил навигацию слайдера в hero

--- a/src/modules/sections/hero.hbs
+++ b/src/modules/sections/hero.hbs
@@ -118,7 +118,7 @@
           <div class="hero-slider-wrapper">
             <div class="hero-slider-navigation">
               <button
-                class="button button-icon button-icon--next"
+                class="button button--blur button-icon button-icon--next"
                 type="button"
               >
                 <svg class="svg">
@@ -126,7 +126,7 @@
                 </svg>
               </button>
               <button
-                class="button button-icon button-icon--prev"
+                class="button button--blur button-icon button-icon--prev"
                 type="button"
               >
                 <svg class="svg">
