доделал about секцию

--- a/src/modules/components/card-about.hbs
+++ b/src/modules/components/card-about.hbs
@@ -5,7 +5,9 @@
     </div>
     <div class="card-about__info">
       <div class="card-about__content">
-        <div class="card-about__title h2"> Незабываемый отдых в горах </div>
+        <p class="card-about__title h2">
+          <span> Незабываемый отдых в горах </span>
+        </p>
         <div class="card-about__descr">
           <p>
             Туристический комплекс «Белая река» — предлагает увлекательный отдых
