--- a/src/scss/components/card-about.scss
+++ b/src/scss/components/card-about.scss
@@ -1,11 +1,22 @@
 .card-about {
   &__wrapper {
     display: flex;
-    min-height: 711px;
+    min-height: 37.03125vw;
+
+    @include max-width($touch) {
+      display: block;
+      min-height: inherit;
+    }
   }
 
   &__banner {
     flex: 1 1 620px;
+
+    @include max-width($touch) {
+      flex: auto;
+      width: 100%;
+      height: 376px;
+    }
 
     img {
       object-fit: cover;
@@ -17,8 +28,13 @@
   &__info {
     display: flex;
     flex: 1 1 1096px;
-    padding: 32px 20px;
+    padding: 40px;
     background-color: var(--white);
+
+    @include max-width($touch) {
+      display: block;
+      padding: 32px 20px;
+    }
   }
 
   &__content {
@@ -28,56 +44,50 @@
 
   &__title {
     position: relative;
-    padding-bottom: 36px;
+    margin-bottom: 1.875vw;
 
-    &::before {
-      position: absolute;
+    @include max-width($touch) {
+      margin-bottom: 20px;
+    }
+
+    &::after {
       bottom: 0;
       left: 0;
+      display: block;
       width: 104px;
       height: 5px;
+      margin-top: 1.875vw;
+      margin-bottom: 1.875vw;
       content: '';
       background-color: var(--primary-default);
+      border-radius: 4px;
+
+      @include max-width($touch) {
+        width: 64px;
+        height: 4px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+      }
     }
   }
 
   &__descr {
-    margin-top: 36px;
-
     p {
-      font: 300 1.125rem / 1.556 $second-font;
+      font-family: $second-font;
+      font-size: 1.125rem;
+      font-weight: 300;
+      line-height: 1.5555;
+
+      @include max-width($touch) {
+        font-size: 14px;
+        line-height: 1.4285714285;
+      }
 
       &:not(:last-child) {
-        margin-bottom: 60px;
-      }
-    }
-  }
+        margin-bottom: 3.125vw;
 
-  @include max-width(768px) {
-    &__wrapper {
-      display: block;
-      min-height: inherit;
-    }
-
-    &__info {
-      display: block;
-    }
-
-    &__title {
-      padding-bottom: 20px;
-
-      &::before {
-        width: 64px;
-        height: 4px;
-      }
-    }
-
-    &__descr {
-      margin-top: 20px;
-
-      p {
-        &:not(:last-child) {
-          margin-bottom: 20px;
+        @include max-width($touch) {
+          margin-bottom: 16px;
         }
       }
     }
