--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -31,6 +31,7 @@
 @import 'sections/offers';
 @import 'sections/about';
 @import 'sections/services';
+@import 'sections/rooms';
 
 // Themes - Темы
 @import 'themes/default';
