--- a/src/scss/components/card-room.scss
+++ b/src/scss/components/card-room.scss
@@ -1,25 +1,40 @@
 .card-room {
-  max-width: 548px;
+  width: 100%;
   background-color: var(--white);
 
-  &__banner {
-    max-height: 537px;
+  &__img-wrapper {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+    .swiper-lazy-preloader {
+      --swiper-preloader-color: var(--primary-default);
+    }
   }
 
-  // &__slider {
-  // }
+  &__img {
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    object-fit: cover;
+    transition: opacity 0.2s ease, transform 0.2s ease;
 
-  // &__slide {
-  // }
+    &.swiper-lazy {
+      opacity: 0;
+    }
 
-  // &__photo-wrap {
-  // }
-
-  // &__photo {
-  // }
+    &.swiper-lazy-loaded {
+      opacity: 1;
+    }
+  }
 
   &__content {
     padding: 32px 40px;
+
+    @include max-width($touch) {
+      padding: 20px;
+    }
   }
 
   // &__info {
@@ -30,24 +45,138 @@
     font-size: 1.5rem;
     font-weight: 300;
     line-height: 1.5;
+
+    @include max-width($touch) {
+      margin-bottom: 4px;
+      font-size: 16px;
+      line-height: 1.5;
+    }
   }
 
   &__link {
-    font-size: 0.75rem;
+    font-size: 12px;
     line-height: 1.667;
     color: var(--primary-default);
     text-transform: uppercase;
+
+    @include max-width($touch) {
+      font-size: 10px;
+      line-height: 2;
+      text-transform: uppercase;
+    }
   }
 
   &__total {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-top: 1.25rem;
+
+    @include max-width($touch) {
+      margin-top: 4px;
+    }
   }
 
   &__price {
     font-size: 2.25rem;
     font-weight: 500;
     line-height: 1.2;
+
+    @include max-width($touch) {
+      font-size: 16px;
+      line-height: 1.5;
+    }
+  }
+
+  &__button {
+    --padding: 14px 2.695em;
+
+    margin: 0 0 0 auto;
+
+    @include min-width(1601px) {
+      --min-width: 226px;
+    }
+
+    @include max-width($touch) {
+      --font-size: 10px;
+      --padding: 8px 2.695em;
+    }
+  }
+}
+
+.card-room-slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  background-color: var(--white);
+
+  .swiper-wrapper {
+    transition-timing-function: ease;
+  }
+
+  &-wrapper {
+    position: relative;
+    width: 100%;
+  }
+
+  &-inner {
+    position: relative;
+    padding-bottom: 98%;
+
+    // @include max-width($phone) {
+    //   padding-bottom: 80%;
+    // }
+  }
+
+  &-pagination {
+    --swiper-pagination-color: var(--primary-default);
+
+    // position: relative;
+    bottom: 0;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 16px;
+    margin-top: 4px;
+
+    @include max-width($touch) {
+      padding: 8px 12px;
+    }
+
+    .swiper-pagination-bullet {
+      flex-grow: 1;
+      width: auto;
+      height: 4px;
+      margin: 0 1px;
+      background-color: var(--bg-main);
+      border-radius: 0;
+      opacity: 1;
+
+      @include max-width($touch) {
+        height: 2px;
+      }
+
+      &.swiper-pagination-bullet-active {
+        background-color: var(--primary-default);
+      }
+    }
+  }
+
+  &-hover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    display: flex;
+    width: 100%;
+    height: 100%;
+
+    > div {
+      flex-grow: 1;
+    }
   }
 }
